--- a/css/head-footer.css
+++ b/css/head-footer.css
@@ -172,6 +172,32 @@ body {
 }
 
 /* Utilities */
+
+
+/* Part --------Arrow */
+
+.container-arrow {
+  display: flex;
+  align-items: center;
+  padding-left: 0;
+}
+
+.container-arrow p {
+  display: inline-block;
+  font-size: 11px;
+  margin-bottom: 0;
+  margin-top: 24px;
+}
+
+.arrow {
+  background-image: url('../images/right-arrow.svg');
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  margin-top: 22px;
+  margin-right: 7px;
+  margin-left: 7px;
+}
 .sizing20 {
   font-size: 20px;
 }
