--- a/css/main-style.css
+++ b/css/main-style.css
@@ -17,11 +17,11 @@
 /* All carousel Medtexnika/Lekars/ Poleznie stati */
 
 .carousel-control-prev-icon {
-  background-image: url('./carousel-vector-left.svg') !important;
+  background-image: url('../images/carousel-vector-left.svg') !important;
 }
 
 .carousel-control-next-icon {
-  background-image: url('./carousel-vector-right.svg') !important;
+  background-image: url('../images/carousel-vector-right.svg') !important;
 }
 
 .carousel-control-next span {
@@ -43,11 +43,13 @@
 .main-h1 h1 {
   margin-top: 20px;
   margin-bottom: 10px;
+  padding-left: 0;
 }
 
 .container-box {
   display: flex;
   justify-content: space-between;
+  padding: 0;
 }
 
 .box {
@@ -228,30 +230,6 @@
   justify-content: center;
 }
 
-/* SECTION part -------- Arrow */
-
-.container-arrow {
-  display: flex;
-  align-items: center;
-  padding-left: 0;
-}
-
-.container-arrow p {
-  display: inline-block;
-  font-size: 11px;
-  margin-bottom: 0;
-  margin-top: 24px;
-}
-
-.arrow {
-  background-image: url('../images/right-arrow.svg');
-  width: 8px;
-  height: 8px;
-  display: inline-block;
-  margin-top: 22px;
-  margin-right: 7px;
-  margin-left: 7px;
-}
 
 /* Section boxes */
 
