--- a/css/card-style.css
+++ b/css/card-style.css
@@ -1,10 +1,10 @@
 .medicine-name {
   width: 1040px;
   height: 370px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(213, 213, 213, 0.6);
   box-sizing: border-box;
-  padding: 20px
+  padding: 20px;
 }
 
 .medicine-boxes {
@@ -12,8 +12,6 @@
   justify-content: space-between;
   padding: 0;
 }
-
-
 
 /* Change some carousel parts */
 
@@ -29,8 +27,8 @@ section.container {
 
 .medicine-instruction-box {
   width: 1040;
-  height: 593px;
-  background: #FFFFFF;
+  height: 620px;
+  background: #ffffff;
   border: 1px solid rgba(213, 213, 213, 0.6);
 }
 
@@ -43,18 +41,16 @@ section.container {
   margin-left: 18px;
   margin-top: 2px;
   margin-right: 5px;
-
 }
 
 .stars {
   display: inline-block;
   padding: 0;
   margin: 0;
-
 }
 
 .topbox {
-  display: flex
+  display: flex;
 }
 
 .topbox p {
@@ -63,10 +59,8 @@ section.container {
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
-  color: #ADACAC;
+  color: #adacac;
   margin-bottom: 8px;
-  
-
 }
 
 /* Mainbox */
@@ -80,7 +74,7 @@ section.container {
 .medicine-name-box-1 {
   width: 260px;
   height: 260px;
-  background: #F6F6F6;
+  background: #f6f6f6;
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
@@ -88,19 +82,15 @@ section.container {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #B0B0B0;
+  color: #b0b0b0;
   padding: 0;
   margin: 0;
-  
 }
-
-
 
 .medicine-name-box-3 {
   width: 361px;
   height: 300px;
   border: 1px solid #333333;
-
 }
 
 .medicine-name-boxes-first-box p {
@@ -111,12 +101,11 @@ section.container {
   line-height: 14px;
   display: flex;
   align-items: center;
-  color: #ADACAC;
+  color: #adacac;
   display: flex;
   border: 0.5px solid rgba(213, 213, 213, 0.6);
   margin-bottom: 20px;
   padding: 10px;
-
 }
 
 .medicine-name-box-2 {
@@ -130,13 +119,12 @@ section.container {
   font-weight: normal;
   font-size: 22px;
   line-height: 26px;
-  color: #2A2A2A;
+  color: #2a2a2a;
   margin-bottom: 20px;
 }
 
-
 .medicine-name-box-2 .red {
-  background: #BD3D4B;
+  background: #bd3d4b;
   width: 100%;
   font-style: normal;
   font-weight: bold;
@@ -144,13 +132,13 @@ section.container {
   line-height: 17px;
   align-items: center;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 6px;
   border: none;
 }
 
 .medicine-name-box-2 .green {
-  background: #50BE14;
+  background: #50be14;
   width: 100%;
   font-style: normal;
   font-weight: bold;
@@ -158,7 +146,7 @@ section.container {
   line-height: 17px;
   align-items: center;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 6px;
   border: none;
 }
@@ -167,7 +155,7 @@ section.container {
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
-  color: #2A2A2A;
+  color: #2a2a2a;
   margin: 0;
 }
 
@@ -176,22 +164,21 @@ section.container {
   font-weight: normal;
   font-size: 12px;
   line-height: 14px;
-  color: #ADACAC;
+  color: #adacac;
 }
 
 .medicine-name-details {
   margin-top: 10px;
 }
 
-
-.medicine-box-1, 
+.medicine-box-1,
 .medicine-box-2 {
   width: 510px;
   height: 208px;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(213, 213, 213, 0.6);
   box-sizing: border-box;
-  padding: 20px
+  padding: 20px;
 }
 
 .medicine-box-1 ul {
@@ -206,7 +193,7 @@ section.container {
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  color: #2A2A2A;
+  color: #2a2a2a;
 }
 
 .medicine-box-1 p:first-child {
@@ -215,7 +202,7 @@ section.container {
 }
 
 .medicine-box-1 p:last-child {
-  margin-left:  20px;
+  margin-left: 20px;
   font-weight: bold;
 }
 
@@ -231,7 +218,7 @@ section.container {
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  color: #2A2A2A;
+  color: #2a2a2a;
 }
 
 .medicine-box-2 p:first-child {
@@ -240,14 +227,168 @@ section.container {
 }
 
 .medicine-box-2 p:last-child {
-  margin-left:  20px;
+  margin-left: 20px;
   font-weight: bold;
 }
+.medicine-price-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Medicine price section */
+
+.medicine-price-top p {
+  display: inline-block;
+  margin: 20px 10px 0px 20px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #adacac;
+}
+
+.medicine-name-box-3 .price {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  /* line-height: 24px; */
+  color: #2a2a2a;
+  margin: 2px 10px 0px 20px;
+}
+
+.medicine-name-box-3 .medicine-form {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #adacac;
+  margin: 0px 10px 0px 20px;
+}
+
+.medicine-price-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20px;
+}
+
+.medicine-quantity {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.medicine-quantity div {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 8px;
+  line-height: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #2a2a2a;
+}
+
+.medicine-quantity .box-1 {
+  width: 38.42px;
+  height: 32px;
+  background: #50be14;
+  font-weight: normal;
+  color: #ffffff;
+  font-size: 22px;
+  align-items: center;
+  line-height: 12px;
+  padding-bottom: 3px;
+}
+
+.medicine-quantity .box-2 {
+  width: 38.42px;
+  height: 32px;
+  background: #ffffff;
+  border-top: 0.5px solid rgba(213, 213, 213, 0.6);
+  border-bottom: 0.5px solid rgba(213, 213, 213, 0.6);
+}
+
+.medicine-quantity .box-3 {
+  width: 38.42px;
+  height: 32px;
+  background: #50be14;
+  color: #ffffff;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 12px;
+
+}
+
+.medicine-buy {
+  background: #50be14;
+  width: 180px;
+  height: 32px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 8px;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  padding: 6px;
+  border: none;
+}
+
+.medicine-instruction-box {
+  padding: 20px;
+}
+
+.medicine-instruction-box p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #2a2a2a;
+  border-bottom: 1px solid #e6e6e6;
+  margin: 0;
+  padding: 7px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+.medicine-instruction-box p:first-child {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  color: #2a2a2a;
+  border-bottom: none;
+  padding: 0;
+}
+
+.medicine-instruction-box p:last-child {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: justify;
+  color: rgba(42, 42, 42, 0.6);
+  border-bottom: none;
+}
+
+.medicine-instruction-box .condition {
+  border-bottom: none;
+}
+
+.medicine-instruction-box p .fa-chevron-down,
+.medicine-instruction-box p .fa-chevron-up {
+  color: #787878;
+  margin-right: 7px;
+}
+
+/* Small carousel */
 
 
-
-
-
-
-
-
+.medicine-smallbox {
+  width: 107px;
+  height: 80px;
+  background: #ffffff;
+  border: 1px solid rgba(213, 213, 213, 0.6);
+  box-sizing: border-box;
+  border-radius: 1px;
+  margin-bottom: 2px;
+}
