--- a/css/card-style.css
+++ b/css/card-style.css
@@ -4,7 +4,8 @@
   background: #ffffff;
   border: 1px solid rgba(213, 213, 213, 0.6);
   box-sizing: border-box;
-  padding: 20px;
+  padding: 5px 20px 20px;
+  margin-bottom: 20px;
 }
 
 .medicine-boxes {
@@ -28,7 +29,6 @@ section.container {
 .medicine-instruction-box {
   width: 1040;
   height: 620px;
-  background: #ffffff;
   border: 1px solid rgba(213, 213, 213, 0.6);
 }
 
@@ -88,9 +88,14 @@ section.container {
 }
 
 .medicine-name-box-3 {
+  margin-top: 80px;
   width: 361px;
-  height: 300px;
-  border: 1px solid #333333;
+  height: 270px;
+  border: 1px solid rgba(213, 213, 213, 0.6);
+}
+
+.medicine-name-topbox {
+  margin-top: 20px;
 }
 
 .medicine-name-boxes-first-box p {
@@ -112,6 +117,7 @@ section.container {
   width: 339px;
   height: 260px;
   border: none;
+  margin: 45px 20px;
 }
 
 .medicine-name-box-2 p {
@@ -135,7 +141,10 @@ section.container {
   color: #ffffff;
   padding: 6px;
   border: none;
+  margin-top: 5px;
 }
+
+
 
 .medicine-name-box-2 .green {
   background: #50be14;
@@ -159,6 +168,7 @@ section.container {
   margin: 0;
 }
 
+
 .medicine-name-details span {
   font-style: normal;
   font-weight: normal;
@@ -170,6 +180,65 @@ section.container {
 .medicine-name-details {
   margin-top: 10px;
 }
+
+.medicine-country {
+  background-image: url('../images/icon-country.svg');
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 3px;
+}
+
+.medicine-manufacturer {
+  background-image: url('../images/icon-manufacturer.svg');
+  display: inline-block;
+  width: 10px;
+  height: 13px;
+  margin-right: 3px;
+}
+
+.medicine-active {
+  background-image: url('../images/icon-active-substance.svg');
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 3px;
+}
+
+.medicine-recipe {
+  background-image: url('../images/icon-recipe.svg');
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 3px;
+}
+
+.medicine-pharm {
+  background-image: url('../images/icon-pharma-group.svg');
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 3px;
+}
+
+.icon-tabulette {
+  background-image: url('../images/icon-tabulette.svg');
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-right: 3px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .medicine-box-1,
 .medicine-box-2 {
@@ -253,7 +322,7 @@ section.container {
   font-size: 15px;
   /* line-height: 24px; */
   color: #2a2a2a;
-  margin: 2px 10px 0px 20px;
+  margin: 5px 10px 20px 20px;
 }
 
 .medicine-name-box-3 .medicine-form {
@@ -262,7 +331,7 @@ section.container {
   font-size: 12px;
   line-height: 14px;
   color: #adacac;
-  margin: 0px 10px 0px 20px;
+  margin: 20px 10px 20px 20px;
 }
 
 .medicine-price-buttons {
@@ -336,6 +405,7 @@ section.container {
 
 .medicine-instruction-box {
   padding: 20px;
+  margin-top: 20px;
 }
 
 .medicine-instruction-box p {
@@ -383,12 +453,156 @@ section.container {
 /* Small carousel */
 
 
-.medicine-smallbox {
-  width: 107px;
+.medicine-info-box {
+  min-width: 107px;
   height: 80px;
-  background: #ffffff;
   border: 1px solid rgba(213, 213, 213, 0.6);
-  box-sizing: border-box;
-  border-radius: 1px;
-  margin-bottom: 2px;
 }
+
+.medicine-container-box {
+  display: flex;
+  padding: 0;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.medicine-container-box .second-box {
+  border-right: none;
+  border-left: none;
+}
+
+
+/* card carousel */
+
+.carousel-control-prev-icon {
+  background-image: url('../images/carousel-vector-left.svg') !important;
+
+}
+
+.carousel-control-next-icon {
+  background-image: url('../images/carousel-vector-right.svg') !important;
+}
+
+.carousel-control-next span {
+  color: black;
+}
+
+.carousel-control-prev {
+  left: -20px;
+}
+
+.carousel-control-next {
+  right: -20px;
+}
+
+.carousel-item {
+  background: #ffffff;
+}
+
+/* Small carousel characteristics */
+
+.carousel-medicine-info .carousel-control-prev {
+  left: -28px;
+}
+.carousel-medicine-info .carousel-control-next {
+  right: -27px;
+}
+
+
+.carousel-medicine-info .carousel-control-prev-icon {
+  background-image: url('../images/carousel-vector-left.svg') !important;
+  height: 10px;
+
+}
+
+.carousel-medicine-info .carousel-control-next-icon {
+  background-image: url('../images/carousel-vector-right.svg') !important;
+  height: 10px;
+}
+
+.medicine-info-box p:first-child {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 10px;
+  align-items: center;
+  text-align: center;
+  color: #ADACAC;
+  margin-top: 8px;
+  margin-bottom: 5px;
+}
+
+.medicine-info-box .manufacturer {
+  font-style: normal;
+  font-weight: normal;
+  display: flex;
+  font-size: 6px;
+  line-height: 8px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #ADACAC;
+  margin-top: 10px;
+  margin-left: 8px;
+}
+
+.medicine-info-box p:last-child {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 7px;
+  line-height: 8px;
+  align-items: center;
+  text-align: center;
+  color: #50BE14;
+}
+
+
+.fa-heart {
+  margin-right: 5px;
+}
+
+.medicine-carousel-margin {
+  margin-bottom: 20px;
+}
+
+
+.special-offer-logo {
+  background-image: url('../images/special-offer.svg');
+  height: 72px;
+  width: 390px;
+  margin-bottom: 10px;
+  position: absolute;
+  margin-top: 0;
+  margin-left: 2px;
+}
+
+.special-offer-logo p {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  color: #FFFFFF;
+  margin-top: 28px;
+}
+
+
+/* ------------Order recipe--------------- */
+
+.medicine-name-box-2 .blue {
+  background: #79D1E4;;
+  width: 100%;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  padding: 6px;
+  border: none;
+}
+
+
+
+
