--- a/css/card.css
+++ b/css/card.css
@@ -16,18 +16,15 @@
 
 /* Change some carousel parts */
 
-section.container {
-  padding: 0;
-}
 
 .main-h1 {
   padding-left: 0;
 }
 
-/* Medicine instruciton box */
+/* Medicine instruction box */
 
 .medicine-instruction-box {
-  width: 1040;
+  width: 1040px;
   border: 1px solid rgba(213, 213, 213, 0.6);
 }
 
@@ -113,7 +110,6 @@ section.container {
   font-weight: bold;
   font-size: 20px;
   line-height: 24px;
-  text-align: center;
   color: #FFFFFF;
   margin-top: 26px;
   margin-left: 21px;
@@ -141,8 +137,7 @@ section.container {
   display: flex;
   align-items: center;
   color: #adacac;
-  display: flex;
-  border: 0.5px solid rgba(213, 213, 213, 0.6);
+  border: 1px solid rgba(213, 213, 213, 0.6);
   margin-bottom: 20px;
   padding: 10px;
 }
