--- a/css/shared.css
+++ b/css/shared.css
@@ -1,174 +1,173 @@
 /* ----------------Header-------------------- */
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Top layer */
 
 .logo {
-  margin: 8px;
+    margin: 8px;
 }
 
 .header {
-  height: 76px;
-  box-sizing: border-box;
+    height: 76px;
+    box-sizing: border-box;
 }
 
 .header a {
-  text-decoration: none;
-  margin-right: 10px;
-  color: #333333;
+    text-decoration: none;
+    margin-right: 10px;
+    color: #333333;
 }
 
 .header__register {
-  margin-right: 3px;
+    margin-right: 3px;
 }
 
 /* Search */
 
 .search-color {
-  background: #50be14;
+    background: #50be14;
 }
 
 .search-color .input-group {
-  margin-top: 13px;
-  margin-bottom: 13px;
+    margin-top: 13px;
+    margin-bottom: 13px;
 }
 
 .input-group-prepend button:hover {
-  background-color: #ffffff;
-  color: #434343;
+    background-color: #ffffff;
+    color: #434343;
 }
 
 .btn-dropdown {
-  background: #ffffff;
-  border-radius: 0%;
-  color: #333333;
-  width: 212px;
-  height: 43px;
+    background: #ffffff;
+    border-radius: 0%;
+    color: #333333;
+    width: 212px;
+    height: 43px;
 }
 
 .hamburger-menu {
-  margin-right: 5px;
-  color: #50be14;
+    margin-right: 5px;
+    color: #50be14;
 }
 
 .search-position {
-  position: relative;
-  right: 25px;
-  top: 15px;
+    position: relative;
+    right: 25px;
+    top: 15px;
 }
 
 .coloring {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 .icons {
-  padding-top: 4px;
+    padding-top: 4px;
 }
 
 .icons i {
-  margin-left: 15px;
-  margin-right: 5px;
+    margin-left: 15px;
+    margin-right: 5px;
 }
 
 /* Navbar */
 
 .navbar-expand-lg {
-  box-shadow: 2px 3px 2px #888888;
-  border-top: none;
-  max-height: 39px;
+    box-shadow: 2px 3px 2px #888888;
+    border-top: none;
+    max-height: 39px;
 }
 
 .navbar-nav li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 9px;
-  color: #2a2a2a;
-  width: 115px;
-  text-align: center;
-  font-size: 9px;
-  font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 9px;
+    color: #2a2a2a;
+    width: 115px;
+    text-align: center;
+    font-weight: bold;
 }
 
 .navbar-nav li a {
-  display: flex;
+    display: flex;
 }
 
 /* Customized icons */
 
 .fa-stethoscope {
-  font-size: 18px;
-  padding-top: 3px;
-  margin-right: 4px;
+    font-size: 18px;
+    padding-top: 3px;
+    margin-right: 4px;
 }
 
 /* --------------Footer------------------ */
 
-.mypharma {
-  margin-top: 30px;
-  font-size: 15px;
-  color: #b0b0b0;
+.company-info {
+    margin-top: 30px;
+    font-size: 15px;
+    color: #b0b0b0;
 }
 
 .style-list-item {
-  text-decoration: none;
-  color: #a5a5a5;
+    text-decoration: none;
+    color: #a5a5a5;
 }
 
 .style-list {
-  list-style: none;
-  padding-left: 0;
+    list-style: none;
+    padding-left: 0;
 }
 
 .footer {
-  background: #f5f5f5;
-  height: 243px;
+    background: #f5f5f5;
+    height: 243px;
 }
 
 .footer-element {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .footer-element h1 {
-  margin-top: 18px;
+    margin-top: 18px;
 }
 
 .logos img {
-  width: 120px;
-  height: 35.64px;
+    width: 120px;
+    height: 35.64px;
 }
 
 .sizing-social {
-  font-size: 30px;
-  margin-right: 20px;
-  color: #999999;
+    font-size: 30px;
+    margin-right: 20px;
+    color: #999999;
 }
 
 .location {
-  font-size: 14px;
-  color: #999999;
-  margin-top: 9px;
+    font-size: 14px;
+    color: #999999;
+    margin-top: 9px;
 }
 
 .location i {
-  margin-right: 5px;
-  margin-top: 2px;
+    margin-right: 5px;
+    margin-top: 2px;
 }
 
 .footer-sizing {
-  font-size: 15px;
-  color: #2a2a2a;
-  margin-bottom: 20px;
+    font-size: 15px;
+    color: #2a2a2a;
+    margin-bottom: 20px;
 }
 
 .socials a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 /* Utilities */
@@ -177,54 +176,55 @@ body {
 /* Part --------Arrow */
 
 .container-arrow {
-  display: flex;
-  align-items: center;
-  padding-left: 0;
+    display: flex;
+    align-items: center;
+    padding-left: 0;
 }
 
 .container-arrow p {
-  display: inline-block;
-  font-size: 11px;
-  margin-bottom: 0;
-  margin-top: 24px;
+    display: inline-block;
+    font-size: 11px;
+    margin-bottom: 0;
+    margin-top: 24px;
 }
 
 .arrow {
-  background-image: url('../images/right-arrow.svg');
-  width: 8px;
-  height: 8px;
-  display: inline-block;
-  margin-top: 22px;
-  margin-right: 7px;
-  margin-left: 7px;
+    background-image: url('../images/right-arrow.svg');
+    width: 8px;
+    height: 8px;
+    display: inline-block;
+    margin-top: 22px;
+    margin-right: 7px;
+    margin-left: 7px;
 }
-.sizing20 {
-  font-size: 20px;
+
+.font-size-20 {
+    font-size: 20px;
 }
 
 .style-list li {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .social-par {
-  margin-top: 10px;
-  color: #2a2a2a;
-  margin-bottom: 2px;
+    margin-top: 10px;
+    color: #2a2a2a;
+    margin-bottom: 2px;
 }
 
 .socials {
-  padding: 0;
+    padding: 0;
 }
 
 .max-width {
-  max-width: 1040px;
+    max-width: 1040px;
 }
 
 .displaybox {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .clr {
-  clear: both;
+    clear: both;
 }
