--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
     font-size: 3px;
 }
 
-.smallbox {
+.small-box {
     width: 245px;
     height: 251px;
     background: #ffffff;
@@ -37,7 +37,7 @@
     margin-bottom: 2px;
 }
 
-.smallbox h2 {
+.small-box h2 {
     font-size: 15px;
     text-align: center;
     margin-top: 15px;
@@ -164,27 +164,6 @@
     color: #2A2A2A;
 }
 
-.delivery-images-boxes-1 {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 20px 0;
-}
-
-.delivery-images-boxes-2 {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 20px 0;
-}
-
-.delivery-images-box p {
-    max-width: 320px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #2A2A2A;
-    margin-top: 10px;
-}
 
 .delivery-grid-container {
     display: grid;
@@ -463,8 +442,8 @@
 
 /* Aside box */
 
-.smallbox-1,
-.smallbox-2 {
+.small-box-1,
+.small-box-2 {
     width: 172px;
     height: 245px;
     border: none;
@@ -535,7 +514,7 @@
 
 /* ------------404.html------------- */
 
-.no-found-page {
+.not-found-page {
     max-width: 1040px;
     display: flex;
     justify-items: center;
@@ -543,16 +522,16 @@
     height: 300px;
 }
 
-.no-found-page .no-found {
+.not-found-page .not-found {
     max-width: 717px;
     margin-top: 60px;
 }
 
-.no-found-page .error-page-404 {
+.not-found-page .error-page-404 {
     margin-top: 20px;
 }
 
-.no-found-page .error-page-404 h6 {
+.not-found-page .error-page-404 h6 {
     display: inline-block;
     font-weight: 700;
     color: #50be14;
@@ -565,7 +544,7 @@
     padding-bottom: 0;
 }
 
-.no-found-page .error-message p {
+.not-found-page .error-message p {
     display: inline-block;
     font-style: normal;
     font-weight: bold;
@@ -579,7 +558,7 @@
     border: 0.5px solid #2A2A2A
 }
 
-.no-found button {
+.not-found button {
     width: 269px;
     height: 50px;
     font-style: normal;
