--- a/css/shared.css
+++ b/css/shared.css
@@ -6,7 +6,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Top layer */
 
 .logo {
     margin: 8px;
@@ -100,7 +99,7 @@ body {
 
 /* Customized icons */
 
-.fa-stethoscope {
+.icon-size {
     font-size: 18px;
     padding-top: 3px;
     margin-right: 4px;
@@ -218,11 +217,7 @@ body {
 
 .max-width {
     max-width: 1040px;
-}
 
-.displaybox {
-    display: flex;
-    justify-content: space-between;
 }
 
 .clr {
