--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@
 }
 
 .delivery-grid-item {
-    height: 260px;
+    height: 290px;
     width: 320px;
 }
 
@@ -367,7 +367,6 @@
 }
 
 .section-main-box {
-    height: 750px;
     width: 800px;
 }
 
@@ -420,7 +419,6 @@
     border: 1px solid rgba(213, 213, 213, 0.6);
     color: #b9b9b9;
 }
-
 
 .grid-container {
     display: grid;
@@ -481,16 +479,20 @@
 }
 
 .section-add-more {
-    margin-top: 200px;
+    margin-top: 10px;
+    text-align: center;
     width: 800px;
-    height: 41px;
+    font-style: normal;
+    font-weight: normal;
     font-size: 17px;
+    line-height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #2A2A2A;
     background: #FFFFFF;
     border: 1px solid rgba(213, 213, 213, 0.6);
-    color: #2a2a2a;
+    padding: 10px;
 }
 
 
@@ -553,6 +555,23 @@
     background-color: #50be14;
     border: none;
     margin-top: 30px;
+}
+
+.brand-page-add-more {
+    margin-top: 10px;
+    text-align: center;
+    width: 800px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #2A2A2A;
+    background: #FFFFFF;
+    border: 1px solid rgba(213, 213, 213, 0.6);
+    padding: 10px;
 }
 
 
