--- a/css/shared.css
+++ b/css/shared.css
@@ -11,6 +11,11 @@ body {
     margin: 8px;
 }
 
+.logos button {
+    border: none;
+
+}
+
 .header {
     height: 76px;
     box-sizing: border-box;
