--- a/css/shared.css
+++ b/css/shared.css
@@ -1,4 +1,14 @@
 /* ----------------Header-------------------- */
+html {
+    font-size: 16px;
+}
+
+@media screen and (max-width: 575px) {
+    html {
+        font-size: 12px;
+    }
+}
+
 body {
     margin: 0;
     padding: 0;
