--- a/css/other.css
+++ b/css/other.css
@@ -122,7 +122,7 @@
     background-color: white;
 }
 
-.rare-medicines-main-box p:first-child {
+.rare-medicines-main-box .main-paragraph {
     padding: 10px 20px;
     border-bottom: 1px solid rgba(213, 213, 213, 0.6);
     margin-bottom: 0;
@@ -156,3 +156,17 @@
     position: relative;
 }
 
+.onsale p {
+    font-size: 15px;
+    text-decoration: line-through;
+    padding: 1px;
+}
+
+.onsale .discount {
+    background-image: url('../images/small-sale-percent.svg');
+    height: 12px;
+    width: 24px;
+    display: inline-block;
+    font-size: 9px;
+    color: #FFFFFF;
+}
