--- a/css/main.css
+++ b/css/main.css
@@ -500,7 +500,7 @@
 /* ------------404.html------------- */
 
 .page-404 {
-    padding: 3.75rem 3.125rem 1.875rem;
+    padding: 1.75rem 3.125rem 1.875rem;
 }
 
 .page-404__not-found {
@@ -541,6 +541,111 @@
 
 
 
+.registration {
+    height: 100vh;
+    background-color: #77E4FF;
+}
+
+.registration__info > img {
+    width: 500px;
+}
+
+.registration__apps-link a {
+    text-decoration: none;
+}
+
+.registration__apps-link img {
+    width: 180px;
+    height: 50px;
+}
+
+.registration__info h2 {
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 42px;
+    color: #2A2A2A;
+}
+
+.registration__info p {
+    font-size: 20px;
+    line-height: 42px;
+    color: #2A2A2A;
+}
+
+
+
+.registration__info > a {
+    font-weight: bold;
+    font-size: 20px;
+    background: transparent;
+    border: 1px solid white;
+    color: white;
+    padding: 10px 50px;
+    margin-top: 65px;
+    text-decoration: none;
+    display: inline-block;
+
+}
+
+.registration__form {
+    width: 450px;
+    background-color: white;
+    padding: 20px;
+}
+
+@media screen and (max-width: 767px) {
+
+    .registration img {
+        width: 200px;
+    }
+
+    .registration__form {
+        width: 100%;
+    }
+}
+
+.registration__form h1 {
+    font-weight: bold;
+    font-size: 30px;
+    color: #2A2A2A;
+}
+
+.registration__form label {
+    font-size: 16px;
+    line-height: 19px;
+    color: #2A2A2A;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.registration__form button {
+    margin: 20px 0;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 8px;
+    background-color: #50BE14;
+    color: #ffffff;
+    padding: 15px;
+    border: none;
+}
+
+.registration__form input {
+    margin: 3px 0;
+    background: #FFFFFF;
+    border: 1px solid rgba(213, 213, 213, 0.6);
+    border-radius: 1px;
+    padding: 10px;
+}
+
+.registration__form p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #9B9A9A;
+}
+
 
 
 .brand-page-add-more {
@@ -560,108 +665,6 @@
     padding: 10px;
 }
 
-/* Registration */
-
-.registration__left {
-    padding: 50px;
-    background: #B7E49E;
-}
-
-.registration__left img {
-    width: 180px;
-    height: 50px;
-    margin: 5px;
-}
-
-.registration__left h5 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 35px;
-    line-height: 42px;
-    color: #2A2A2A;
-}
-
-.registration__left p {
-    font-style: normal;
-    font-size: 20px;
-    line-height: 42px;
-    color: #2A2A2A;
-    margin: 20px 0;
-}
-
-.registration__left button {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    color: #2A2A2A;
-    background: #B7E49E;
-    border: 1px solid #333333;
-    padding: 10px 50px;
-    margin-top: 65px;
-}
-
-
-.registration__right {
-    background: darkgreen;
-    padding: 0px;
-}
-
-.registration-form {
-    padding: 40px;
-    background: #ffffff;
-    margin: 50px;
-}
-
-.registration-form h1 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    color: #2A2A2A;
-}
-
-.registration form label {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #2A2A2A;
-    margin-bottom: 5px;
-    margin-top: 10px;
-}
-
-.registration form button {
-    margin: 20px 0;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 8px;
-    background-color: #50BE14;
-    color: #ffffff;
-    padding: 15px;
-    border: none;
-}
-
-.registration form input {
-    margin: 3px 0;
-    background: #FFFFFF;
-    border: 1px solid rgba(213, 213, 213, 0.6);
-    border-radius: 1px;
-    padding: 10px;
-}
-
-.registration form p {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #9B9A9A;
-}
-
-.registration .checkbox p {
-    display: inline-block;
-    text-align: right;
-}
-
 
 .send-code input {
     padding: 9px;
@@ -675,3 +678,15 @@
     margin: 0;
 }
 
+
+.custom-white-outlined-btn {
+    margin: 20px auto;
+    display: inline-block;
+    background: transparent;
+    color: white;
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 18px;
+}
